显示Script重新设计
